--- a/js/synth.view.html
+++ b/js/synth.view.html
@@ -1,7 +1,51 @@
 <div id="{{instrumentID}}">
-    <div class="keyboard">
-        {{#simpleLoop 24}}
-        <div class="key"></div>
-        {{/simpleLoop}}
+
+    <div class="controls-container">
+
+        <div class="ib control-section">
+            <h4>Amp Envelope</h4>
+            <div>
+                <div>
+                    <label>Attack</label><Br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="0">
+                </div>
+                <div>
+                    <label>Decay</label><br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="1">
+                </div>
+                <div>
+                    <label>Sustain</label><br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="2">
+                </div>
+                <div>
+                    <label>Release</label><br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="3">
+                </div>
+            </div>
+        </div>
+
+        <div class="ib control-section">
+            <h4>Filter Envelope</h4>
+            <div>
+                <div>
+                    <label>Attack</label><Br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="4">
+                </div>
+                <div>
+                    <label>Decay</label><br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="5">
+                </div>
+                <div>
+                    <label>Sustain</label><br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="6">
+                </div>
+                <div>
+                    <label>Release</label><br>
+                    <input type="range" min="0" max="127" step="1" value="0" class="js-control-knob" data-instrument-id="{{instrumentID}}" data-control-id="7">
+                </div>
+            </div>
+        </div>
+
     </div>
+
 </div>
