Added ui for presets (does not work yet)

--- a/js/synth.view.html
+++ b/js/synth.view.html
@@ -46,6 +46,13 @@
             </div>
         </div>
 
+        <div class="ib control-section">
+            <h4>Preset</h4>
+            <div>
+                {{presets}}
+            </div>
+        </div>
+
     </div>
 
     <div class="meter-container">
